--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Multirotor Tools</h1>
     
 <div class="container">
+	<h1>Multirotor Tools</h1>
 	<div class="row">
       <!--left-->
       <div class="col-md-3" id="leftCol">
@@ -131,11 +131,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type='text/javascript'>
       $(document).ready(function() {
-        $('#sidebar').affix({
-          offset: {
-            top: 235
-          }
-        });     
+        $('#sidebar').affix();     
       });    
     </script>
   
