--- a/index.html
+++ b/index.html
@@ -209,7 +209,11 @@ body {
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type='text/javascript'>
       $(document).ready(function() {
-        $('#sidebar').affix();     
+        $('#sidebar').affix(
+	offset: {
+	    top: 235
+	  }
+	);     
       });  
 /* smooth scrolling sections */
 $('a[href*=#]:not([href=#])').click(function() {
