--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Multirotor Tools - Directory of Resources for Drone Pilots</title>
+    <title>Multirotor Tools - Resources for Drone Pilots</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,14 +17,6 @@
     <![endif]-->
         <style type="text/css">
 
-
-body {
- padding-top:50px;
-}
-
-#masthead { 
- min-height:250px;
-}
 
 #masthead h1 {
  font-size: 30px;
