--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
   </head>
   <body>
 
-  <div class="container">
-          <h1>Multirotor Tools</h1>
-          <p class="lead">A Directory of Resources, Apps and Tools for Drone Pilots.</p>
-  </div>
+
+<h1>Multirotor Tools</h1>
+<p>A Directory of Resources, Apps and Tools for Drone Pilots.</p>
 
     
 <div class="container">
