--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
   <body>
 
 
-<h1>Multirotor Tools</h1>
-<p>A Directory of Resources, Apps and Tools for Drone Pilots.</p>
 
     
 <div class="container">
+	<div class="row">
+		<div class="col">
+			<h1>Multirotor Tools</h1>
+			<p>A Directory of Resources, Apps and Tools for Drone Pilots.</p>
+		</div>
+	</div>	
 <div class="row">
       <!--left-->
       <div class="col-3">
