--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   
     <title>Multirotor Tools - Resources for Drone Pilots</title>
-
+<style>
+	.page-header {
+padding: 5rem 6rem;
+    color: #fff;
+    text-align: center;
+    background-color: #159957;
+    background-image: linear-gradient(120deg, #155799, #159957);
+}
+	  </style>
   </head>
   <body>
 
@@ -17,7 +25,7 @@
 
     
 <div class="container">
-	<div class="row">
+	<div class="row page-header">
 		<div class="col">
 			<h1>Multirotor Tools</h1>
 			<p>A Directory of Resources, Apps and Tools for Drone Pilots.</p>
