--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <title>Multirotor Tools - Resources for Drone Pilots</title>
 <style>
 	.page-header {
-padding: 3rem 4rem;
+padding: 2rem 2rem;
     color: #fff;
     text-align: center;
     background-color: #159957;
     background-image: linear-gradient(120deg, #155799, #159957);
+		margin-bottom: 30px;
 }
 	  </style>
   </head>
