--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ padding: 2rem 2rem;
           <li class="nav-item"><a class="nav-link" href="#test-results">Test Results</a></li>
           <li class="nav-item"><a class="nav-link" href="#software">Software</a></li>
 	  <li class="nav-item"><a class="nav-link" href="#calculators">Calculators</a></li>
+	  <li class="nav-item"><a class="nav-link" href="#maps">Find Pilots / Maps</a></li>
         </ul>
       </div><!--/left-->
       
