--- a/index.html
+++ b/index.html
@@ -73,13 +73,19 @@ padding: 2rem 2rem;
 		</div>
 		<div class="col-lg-4">
 		  <div class="card">
-		    <img class="card-img-top" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22235%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20235%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15aeecdb6e0%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A12pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15aeecdb6e0%22%3E%3Crect%20width%3D%22235%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2286.8046875%22%20y%3D%2295.4046875%22%3E235x180%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Card image cap">
+		    <img class="card-img-top" src="/images/rotor-builds.png" alt="Rotor Builds">
 		    <div class="card-block">
-		      <h4 class="card-title">Card title</h4>
-		      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+		      <h4 class="card-title">Rotor Builds</h4>
+		      <ul class="card-text">
+			      <li>Bullet 1</li>
+			      <li>Bullet 2</li>
+			      <li>Bullet 3</li>
+			      <li>Bullet 4</li>
+			      <li>Bullet 5</li>
+			</ul>
 		    </div>
 		    <div class="card-footer">
-		      <small class="text-muted">Last updated 3 mins ago</small>
+		      <a href="http://RotorBuilds.com" target="_blank">http://RotorBuilds.com</a>
 		    </div>
 		  </div>
 		</div>
