--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ padding: 2rem 2rem;
 	<div class="row">
   		<div class="col-lg-4">
 		  <div class="card">
-		    <img class="card-img-top" src="/images/rotor-ratings.png" alt="Rotor Ratings">
+		    <img class="card-img-top" src="/images/rotor-ratings.png?v=2" alt="Rotor Ratings">
 		    <div class="card-block">
 		      <h4 class="card-title">Rotor Ratings</h4>
 		      <ul class="card-text">
