--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ padding: 2rem 2rem;
     background-image: linear-gradient(120deg, #155799, #159957);
 		margin-bottom: 30px;
 }
+	.card-image-top {
+	width:100%;
+	}
 	  </style>
   </head>
   <body>
