--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     background-image: linear-gradient(120deg, #155799, #159957);
     margin-bottom: 30px;
   }
-  .card-image-top {
+  .card-img-top {
     width:100%;
   }
   </style>
