--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </ul>
             </div>
             <div class="card-footer">
-              <a href="http://RotorRatings.com" target="_blank">http://RotorRatings.com</a>
+              <a href="https://RotorRatings.com" target="_blank">RotorRatings.com</a>
             </div>
           </div>
           <!--/item-->
@@ -94,7 +94,7 @@
               </ul>
             </div>
             <div class="card-footer">
-              <a href="http://RotorBuilds.com" target="_blank">http://RotorBuilds.com</a>
+              <a href="http://RotorBuilds.com" target="_blank">RotorBuilds.com</a>
             </div>
           </div>
           <!--/item-->
