--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
           <!--item-->
           <div class="card">
-            <img class="card-img-top" src="/images/rotor-ratings.png" alt="Rotor Ratings">
+            <img class="card-img-top" src="/images/rotor-ratings.jpg" alt="Rotor Ratings">
             <div class="card-block">
               <h4 class="card-title">Rotor Ratings</h4>
               <ul class="card-text">
