--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="row">
 
     <!--navigation-->
-    <div class="col-3">
+    <div class="col-md-3">
       <ul class="nav flex-column">
         <li class="nav-item"><a class="nav-link" href="#parts-builds">Parts / Build Lists</a></li>
         <li class="nav-item"><a class="nav-link" href="#podcasts">Podcasts</a></li>
@@ -51,7 +51,7 @@
     <!--/navigation-->
 
     <!--main content-->
-    <div class="col">
+    <div class="col-md-9">
 
       <h2 id="parts-builds">Parts / Build Lists</h2>
 
