--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     background-image: linear-gradient(120deg, #155799, #159957);
     margin-bottom: 30px;
   }
+  .page-footer {
+    padding: 2rem 2rem;
+    color: #fff;
+    text-align: center;
+    background-color: #ccc;
+  }    
+  .card {
+    margin-top: 20px;
+  }
   .card-img-top {
     width:100%;
   }
@@ -179,9 +188,15 @@
   </div>
 </div>
   
-<footer>
-  <p>&copy; 2017 Multirotor Tools</p>
-</footer>  
+<!-- footer -->
+<div class="container-fluid">
+  <div class="row page-footer">
+    <div class="col">
+      <small>&copy; 2017 Multirotor Tools</small>
+    </div>
+  </div>
+</div>
+<!--/footer-->
 
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
