--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   .card-img-top {
     width:100%;
   }
+  @media screen and (min-width: 48em) {
+    .nav {
+      position: fixed;
+    }
+  }    
   </style>
   </head>
 <body>
