--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <title>Multirotor Tools - Resources for Drone Pilots</title>
   <style>
+  body {
+    position: relative;
+  }    
   .page-header {
     padding: 2rem 2rem;
     color: #fff;
@@ -34,7 +37,7 @@
   }    
   </style>
   </head>
-<body>
+<body data-spy="scroll" data-target="#sidenav">
 
 <!-- header -->
 <div class="container-fluid">
@@ -51,7 +54,7 @@
   <div class="row">
 
     <!--navigation-->
-    <div class="col-md-3">
+    <div class="col-md-3" id="sidenav">
       <ul class="nav flex-column">
         <li class="nav-item"><a class="nav-link" href="#parts-builds">Parts / Build Lists</a></li>
         <li class="nav-item"><a class="nav-link" href="#podcasts">Podcasts</a></li>
