--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     color: #fff;
     text-align: center;
     background-color: #ccc;
-  }    
+  }
+  a.nav-link.active {
+      background-color: #eee;
+  }
   .card {
     margin-top: 20px;
   }
