--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <div class="col">
       <h1>Multirotor Tools</h1>
       <p>A Directory of Resources, Apps and Tools for Drone Pilots.</p>
+      <a class="github-button" href="https://github.com/sammydigits/multirotor.tools/fork" data-style="mega" data-count-href="/sammydigits/multirotor.tools/network" data-count-api="/repos/sammydigits/multirotor.tools#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork sammydigits/multirotor.tools on GitHub">Fork</a>      
     </div>
   </div>
 </div>
@@ -212,6 +213,6 @@
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
+<script src="https://buttons.github.io/buttons.js" async defer></script>
 </body>
 </html>
