--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="col">
       <h1>Multirotor Tools</h1>
       <p>A Directory of Resources, Apps and Tools for Drone Pilots.</p>
-      <a class="github-button" href="https://github.com/sammydigits/multirotor.tools/fork" data-style="mega" data-count-href="/sammydigits/multirotor.tools/network" data-count-api="/repos/sammydigits/multirotor.tools#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork sammydigits/multirotor.tools on GitHub">Fork</a>      
+      <a class="github-button" href="https://github.com/sammydigits/multirotor.tools/fork" data-count-href="/sammydigits/multirotor.tools/network" data-count-api="/repos/sammydigits/multirotor.tools#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork sammydigits/multirotor.tools on GitHub">Fork</a>      
     </div>
   </div>
 </div>
