--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     <!--navigation-->
     <div class="col-md-3" id="sidenav">
       <ul class="nav flex-column">
-        <li class="nav-item"><a class="nav-link" href="#parts-builds">Parts / Build Lists</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#parts-builds">Parts / Build Lists</a></li>
         <li class="nav-item"><a class="nav-link" href="#podcasts">Podcasts</a></li>
         <li class="nav-item"><a class="nav-link" href="#apps">Apps</a></li>
-        <li class="nav-item"><a class="nav-link" href="#test-results">Test Results</a></li>
+        <li class="nav-item"><a class="nav-link" href="#testresults">Test Results</a></li>
         <li class="nav-item"><a class="nav-link" href="#software">Software</a></li>
         <li class="nav-item"><a class="nav-link" href="#calculators">Calculators</a></li>
         <li class="nav-item"><a class="nav-link" href="#maps">Find Pilots / Maps</a></li>
@@ -160,7 +160,7 @@
 
       <hr>
 
-      <h2 id="test-results">Test Results</h2>
+      <h2 id="testresults">Test Results</h2>
       <p>MiniQuadTestBench.com Equipment test results.</p>
       <p>
       Images are responsive sed @mdo but sum are more fun peratis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
